<resources>
    <string name="app_name">Wallpapers App</string>


    <string name="text_share">Share App</string>
    <string name="text_set_wallpapers">Set Wallpapers</string>
    <string name="text_download">Download</string>

    <string name="msg_apply_wallpaper">Applying wallpaper&#8230;</string>
    <string name="msg_preparing_wallpaper">Preparing wallpaper&#8230;</string>
    <string name="btn_set_wallpaper">SET WALLPAPER</string>

    <!--snack bar message-->
    <string name="snack_bar_applying">Applying&#8230;</string>
    <string name="snack_bar_applied">Wallpaper applied.</string>
    <string name="snack_bar_failed">Wallpaper not set.</string>
    <string name="snack_bar_error">Failed! Please try again later.</string>
    <string name="snack_bar_preparing">Preparing&#8230;</string>
    <string name="snack_bar_saving">Saving wallpaper&#8230;</string>
    <string name="snack_bar_saved">Wallpaper saved.</string>
    <string name="snack_bar_favorite_removed">Wallpaper removed from favorite</string>
    <string name="snack_bar_favorite_added">Wallpaper added to favorite</string>


    <string name="dialog_set_title">Set As : </string>
    <string name="set_home_screen">Home Screen</string>
    <string name="set_lock_screen">Lock Screen</string>
    <string name="set_both">Home &amp; Lock Screens</string>
    <string name="set_crop">Crop</string>
    <string name="set_with">Set With&#8230;</string>

    <string name="dialog_option_ok">OK</string>
    <string name="option_yes">Yes</string>
    <string name="dialog_option_cancel">Cancel</string>

    <string name="share_text">I Would like to share this with you. Here You Can Download This Application from PlayStore</string>
    <string name="text_welcome_title">Welcome To Wallpaper App</string>
    <string name="text_welcome_msg">The best way to download your favorite wallpaper and set it in your phone</string>
    <string name="text_start">Start</string>
    <string name="text_share_with">Share with your friends</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_nav_wallpapers">Wallpapers</string>
    <string name="text_nav_gallery">Gallery</string>
    <string name="text_nav_settings">Settings</string>
    <string name="text_search">Search</string>
    <string name="text_no_gallery">No Gallery</string>
    <string name="delete_item">Are you sure you want to delete this item ?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="snack_bar_item_exists">The item already exists</string>
    <string name="text_delete">Delete</string>
    <string name="text_rate">Rate App</string>
    <string name="text_privacy">Privacy Policy</string>
    <string name="text_app_version">App Version:</string>
    <string name="text_dev_name">Developer:</string>

    <string name="text_update_title">Update Now</string>
    <string name="text_update_action">Update</string>
    <string name="text_update_description">Update now and get all new favorite in this app</string>


</resources>