<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context=".activity.FirstActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <FrameLayout
                    android:id="@+id/layout_native_ads"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"/>


                <TextView
                    android:id="@+id/text_welcome_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/text_welcome_title"
                    android:layout_below="@+id/layout_native_ads"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/white"
                    android:textSize="29sp"
                    android:gravity="center"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/text_welcome_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/text_welcome_msg"
                    android:layout_below="@+id/text_welcome_title"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:textStyle="bold"/>


                <Button
                    android:id="@+id/btnStart"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_below="@+id/text_welcome_msg"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/bg_btn_start"
                    android:gravity="center"
                    android:text="@string/text_start"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnShareApp"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_below="@+id/btnStart"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/text_share"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textAllCaps="true"
                    android:background="@drawable/bg_btn_start"
                    android:backgroundTint="@color/color_bg_btn_share"/>

            </RelativeLayout>
        </ScrollView>


    </RelativeLayout>


</RelativeLayout>