<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">


    <RelativeLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:padding="5dp"
            android:src="@drawable/ic_system_update"
            app:tint="@color/colorPrimaryDark" />


        <ImageView
            android:id="@+id/btnUpdateCancel"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_close"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"/>



    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/layout_center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:id="@+id/layoutView"
            android:layout_width="260dp"
            android:layout_height="260dp"
            android:layout_centerHorizontal="true">

            <View
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_graphic"/>

            <ImageView
                android:id="@+id/update_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:padding="10dp"
                android:src="@drawable/ic_update" />

        </RelativeLayout>

        <TextView
            android:id="@+id/update_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/layoutView"
            android:text="@string/text_update_title"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="22sp"/>


        <TextView
            android:id="@+id/update_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/update_title"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/text_update_description"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:textColor="@color/grey_40"
            android:textAllCaps="false"
            android:textStyle="normal"
            android:textSize="17sp"/>
    </RelativeLayout>



    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_btn_update"
        android:text="@string/text_update_action"
        android:textColor="@color/white"
        android:textSize="18sp"
        />

</RelativeLayout>