<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.WallpaperViewer">

    <ImageView
        android:id="@+id/image_wallpaper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY" />

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/ic_back"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@drawable/bg_btn_back"
        app:tint="@color/white" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/layout_banner_ad"
        app:cardBackgroundColor="#80000000"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="3">
            <LinearLayout
                android:id="@+id/btn_share"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_share"
                    app:tint="@color/white" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_share"
                    android:textColor="@color/white"/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_set_wallpaper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_phone"
                    app:tint="@color/white" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_set_wallpapers"
                    android:textColor="@color/white"/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_download"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/image_download"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_download"
                    app:tint="@color/white" />
                <TextView
                    android:id="@+id/text_download"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_download"
                    android:textColor="@color/white"/>


            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:id="@+id/layout_banner_ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>