<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_main"
    tools:context=".fragment.SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:background="@drawable/bg_frame_top_setting"/>


            <ImageView
                android:id="@+id/image_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="90dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_icon"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:orientation="vertical">
                <RelativeLayout
                    android:id="@+id/btn_share"
                    android:layout_width="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_height="70dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="22dp"
                        android:background="@drawable/bg_btn_setting" />
                    <ImageView
                        android:id="@+id/image_share"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_centerVertical="true"
                        android:background="@drawable/bg_image_setting"
                        android:backgroundTint="@color/color_bg_nav"
                        android:padding="10dp"
                        android:src="@drawable/ic_share"
                        app:tint="@color/colorPrimaryDark" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/image_share"
                        android:layout_marginStart="10dp"
                        android:text="@string/text_share"
                        android:textColor="@color/color_bg_nav"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/btn_rate"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="22dp"
                        android:background="@drawable/bg_btn_setting" />
                    <ImageView
                        android:id="@+id/image_rate"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_centerVertical="true"
                        android:background="@drawable/bg_image_setting"
                        android:backgroundTint="@color/color_bg_nav"
                        android:padding="10dp"
                        android:src="@drawable/ic_rate"
                        app:tint="@color/colorPrimaryDark" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/image_rate"
                        android:layout_marginStart="10dp"
                        android:text="@string/text_rate"
                        android:textColor="@color/color_bg_nav"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/btn_privacy"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="22dp"
                        android:background="@drawable/bg_btn_setting" />
                    <ImageView
                        android:id="@+id/image_privacy"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_centerVertical="true"
                        android:background="@drawable/bg_image_setting"
                        android:backgroundTint="@color/color_bg_nav"
                        android:padding="10dp"
                        android:src="@drawable/ic_privacy_policy"
                        app:tint="@color/colorPrimaryDark" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/image_privacy"
                        android:layout_marginStart="10dp"
                        android:text="@string/text_privacy"
                        android:textColor="@color/color_bg_nav"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="22dp"
                        android:background="@drawable/bg_btn_setting"/>
                    <ImageView
                        android:id="@+id/image_version"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_centerVertical="true"
                        android:background="@drawable/bg_image_setting"
                        android:backgroundTint="@color/color_bg_nav"
                        android:padding="10dp"
                        android:src="@drawable/ic_info"
                        app:tint="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/text_app_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@+id/image_version"
                        android:text="@string/text_app_version"
                        android:textColor="@color/color_bg_nav"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="22dp"
                        android:background="@drawable/bg_btn_setting"/>
                    <ImageView
                        android:id="@+id/image_dev_name"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_centerVertical="true"
                        android:background="@drawable/bg_image_setting"
                        android:backgroundTint="@color/color_bg_nav"
                        android:padding="10dp"
                        android:src="@drawable/ic_developer"
                        app:tint="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/text_developer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/image_dev_name"
                        android:layout_marginStart="10dp"
                        android:text="@string/text_dev_name"
                        android:textColor="@color/color_bg_nav"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                </RelativeLayout>

            </LinearLayout>


        </RelativeLayout>

    </ScrollView>


</RelativeLayout>